--- a/GMS-JEDI-2.0-Flipkart-Java-Project/bin/config.properties
+++ b/GMS-JEDI-2.0-Flipkart-Java-Project/bin/config.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost/GMS_db
+url=jdbc:mysql://localhost/test
 user=root
-password=Naman@fk
+password=Rahul@07
